# trsys

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/candle_container/: candle_container.h  realtime_candle_container.h  vector_candle_container.h  waitfree_mutable_candle_container.h
backend/src/candle_container/: realtime_candle_container.cpp  vector_candle_container.cpp  waitfree_mutable_candle_container.cpp
backtest/: CMakeLists.txt
datafactory/: CMakeLists.txt
scripts/: init.sh  install.sh  test_arrow.sh
trader/: CMakeLists.txt
unittest/: CMakeLists.txt  arrow_compute.cpp  arrow_dataset.cpp  arrow_file_io_test.cpp  mimalloc_test.cpp
